--- a/style.css
+++ b/style.css
@@ -4,13 +4,121 @@
   box-sizing: border-box;
 }
 
-header {
-  background-color: white;
+body {
+  font-family: "Lato", sans-serif;
+  font-size: 18px;
+  background: linear-gradient(to bottom, white, #f6d7a7);
 }
 
-.header__logo {
-  text-align: left;
+.principal__img {
+  max-width: 100%;
 }
+
+.principal__texto1 {
+  color: black;
+  margin: auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+  max-width: 1380px;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.col {
+  width: 100%;
+}
+
+header {
+  background-color: white;
+  padding: 0.5rem 0;
+  box-shadow: 0 0.5rem 1 rem rgba(0, 0, 0, 1);
+}
+
+.nav__list {
+  display: flex;
+  list-style: none;
+}
+
+.nav__item {
+  margin: 0 0 0 1.5rem;
+}
+
+.nav__link {
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.nav__link:hover {
+  opacity: 0.65;
+}
+
+.intro__section {
+  padding: 2rem 0 2rem 0;
+}
+
+.texto2 {
+  text-align: center;
+  padding: 3rem;
+}
+.video-novias {
+  text-align: center;
+}
+
+.footer {
+  padding-top: 1rem;
+  background-color: black;
+}
+
+.footer-sm {
+  background-color: #212121;
+  color: white;
+}
+
+.footer-sm a {
+  color: white;
+}
+
+.footer-sm a i {
+  font-size: 1rem;
+  margin-left: 1rem;
+}
+
+.footer-sm__icons {
+  text-align: center;
+  padding: 1.5rem 0;
+}
+
+.footer-bottom {
+  padding: 1.5rem, 0;
+}
+
+.footer-bottom__copyright {
+  text-align: center;
+  color: grey;
+  font-weight: 400;
+}
+
+.footer-bottom__copyright a {
+  color: grey;
+  text-decoration: none;
+}
+
+.footer-bottom__copyright a:hover {
+  color: red;
+}
+/*hasta aca estilos de la pagina princial con header,navBar,footer*/
+
+/*esto es el style del icono de wsp*/
 
 .btn-wsp {
   position: fixed;
@@ -19,86 +127,47 @@ header {
   line-height: 55px;
   bottom: 30px;
   right: 30px;
-  background: rgb(8, 204, 25);
-  color: white;
+
+  color: green;
   border-radius: 100px;
   text-align: center;
-  font-size: 30px;
-  box-shadow: 0px 1px 10 px rgba(0,0,0,0.3);
+  font-size: 40px;
+  box-shadow: 0px 1px 10 px rgba(0, 0, 0, 0.9);
   z-index: 100;
-  }
+}
 
-.btn-wsp:hover{
-  text-decoration: none;
+.btn-wsp:hover {
   color: rgb(8, 204, 25);
-  background: white;
+  background: greenyellow;
+  z-index: 1;
+}
 
+/*esto es el style del grid de la seccion novias,madrinas,fiesta*/
 
+.gallery-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: auto;
+  padding: 20px;
+  grid-gap: 10px;
 }
-.header__menu li {
-  list-style: none;
-  padding: 5px;
-  display: inline-block;
-  text-transform: uppercase;
-  text-align: center;
-  width: 10rem;
-  border: solid black;
-  border-radius: 20px;
-}
-.header__menu li a {
-  text-decoration: none;
-  color: black;
-}
-.principal__img {
+
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 2%;
 }
-.principal__texto1 {
-  color: black;
-  margin: auto;
-  margin-top: 30px;
-  line-height: 2rem;
-  width: 950px;
+
+.gallery__img:hover {
+  transform: scale(1.3);
+  transition: 1.9s ease;
 }
 
-h1 {
-  color: black;
-}
+/*este es el style de contacto*/
 
-.texto2 {
-  width: auto;
-
-}
-
-body {
-  font-family: "Lato", sans-serif;
-  font-size: 16px;
-  text-align: center;
-  font-weight: normal;
-  background-color: rgb(247, 232, 213);
-
-}
-
-footer {
-  padding: 30px;
-  background-color: rgb(185, 184, 184);
-}
-
-div {
-  padding: 10px;
-  margin-bottom: 0px;
-}
-
-.principal__imagenes {
- display: inline-block;
-}
-
-.principal__imagenes2{
-  display: inline-block;
-}
-
-
-.formulario{
-  background-color: rgb(185, 184, 184);
+.formulario {
+  background-color: #f6eabe;
   background-size: 100vw 100vh;
   background-attachment: fixed;
   margin: 250px;
@@ -112,9 +181,8 @@ form {
   padding: 20px 30px;
   margin-top: 20px;
   border-radius: 7px;
-  border: solid black;
+  border: solid #f6d7a7;
 }
-
 
 input,
 textarea {
@@ -133,22 +201,76 @@ textarea {
 }
 
 .button {
-  background: #31384a;
-  color: #fff;
+  background: #f6d7a7;
+  color: black;
   padding: 10px;
 }
 .button:hover {
   cursor: pointer;
-  
 }
 
-p{
+p {
   margin-bottom: 5rem;
-  width: 950px;
+  width: auto;
   color: black;
   margin: auto;
   margin-top: 30px;
   line-height: 2rem;
-
+  text-align: center;
 }
-  
+
+/*estilos correspondientes a lar tarjetas de seccion fiesta*/
+
+.container2 {
+  width: 100%;
+  max-width: 1200px;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
+  margin-bottom: 12rem;
+}
+.tittle {
+  text-align: center;
+  font-size: 40px;
+  color: grey;
+  margin-top: 100px;
+  font-weight: 100;
+}
+.container2 .card {
+  width: 330px;
+  height: auto;
+  border: radius 8px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  margin: 20px;
+  text-align: center;
+  transition: all 0.25s;
+}
+
+.container2 .card:hover {
+  transform: translate(-15px);
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.container2 .card img {
+  width: 330px;
+  height: 320px;
+}
+
+.container2 .card h4 {
+  font-weight: 600;
+}
+
+.container2 .card p {
+  padding: 0 1rem;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.container2 .card a {
+  font-weight: 500;
+  text-decoration: none;
+  color: cadetblue;
+}
